// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`default environment argument parameter name prefix > when both argument CLI_PARAM and CLI_PARAMETER are passed then an error is thrown 1`] = `
[
  [
    "Cannot run command, you made some mistakes:

The parameter \\"foo\\" was passed an argument multiple times via different parameter aliases in the environment.

Here are the docs for this command:

",
  ],
  [
    "
PARAMETERS
                                                                      
  Name     Type              Default       Environment (1)
                                                          
  foo      string             REQUIRED     ✓              
                                                          
  
  NOTES                                                                           
  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  (1) Parameters can be passed arguments via environment variables. Command line  
      arguments take precedence. Environment variable names are snake cased       
      versions of the parameter name (or its aliases), case insensitive. They must
      be prefixed with CLI_PARAMETER_ or CLI_PARAM_ (case insensitive). Examples: 
        → CLI_PARAMETER_FOO=\\"...\\"                                                 
",
  ],
]
`;

exports[`error > when using multiple prefixes and args passed for all param variations 1`] = `
[
  [
    "Cannot run command, you made some mistakes:

The parameter \\"foo\\" was passed an argument multiple times via different parameter aliases in the environment.
X The parameter \\"bar\\" was passed an argument multiple times via different parameter aliases in the environment.

Here are the docs for this command:

",
  ],
  [
    "
PARAMETERS
                                                                      
  Name     Type              Default       Environment (1)
                                                          
  bar      string             REQUIRED     ✓              
                                                          
  foo      string             REQUIRED     ✓              
                                                          
  
  NOTES                                                                           
  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  (1) Parameters can be passed arguments via environment variables. Command line  
      arguments take precedence. Environment variable names are snake cased       
      versions of the parameter name (or its aliases), case insensitive. They must
      be prefixed with CLI_PARAMETER_ or CLI_PARAM_ (case insensitive). Examples: 
        → CLI_PARAMETER_BAR=\\"...\\"                                                 
        → CLI_PARAMETER_FOO=\\"...\\"                                                 
",
  ],
]
`;

exports[`error > when using prefix and there is a typo 1`] = `
[
  [
    "Cannot run command, you made some mistakes:

Missing argument for flag \\"foo\\".

Here are the docs for this command:

",
  ],
  [
    "
PARAMETERS
                                                                      
  Name     Type              Default       Environment (1)
                                                          
  foo      string             REQUIRED     ✓              
                                                          
  
  NOTES                                                                           
  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  (1) Parameters can be passed arguments via environment variables. Command line  
      arguments take precedence. Environment variable names are snake cased       
      versions of the parameter name (or its aliases), case insensitive. They must
      be prefixed with CLI_PARAMETER_ or CLI_PARAM_ (case insensitive). Examples: 
        → CLI_PARAMETER_FOO=\\"...\\"                                                 
",
  ],
]
`;
